--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
     <h1>Alex's Work</h1>
     <a href="e0/index.html">exercise 0</a>
+    <a href="https://www.google.com/">link to google</a>
+    <img src="e1/1440-1.png">
   </body>
 </html>
