--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <title>Alexandra Middlebrooks</title>
+      <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <h1>Alex's Work</h1>
