--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
       <title>Alexandra Middlebrooks</title>
-      <link href="css/main.css" rel="stylesheet">
+      <link href="../css/main.css" rel="stylesheet">
   </head>
   <body>
     <h1>Alex's Work</h1>
-    <a href="e0/index.html">exercise 0</a>
-    <a href="https://www.google.com/">link to google</a>
+    <ul>
+      <li><a href="e0/index.html">exercise 0</a></li>
+      <li><a href="e1/index.html">exercise 1</a></li>
+      <li><a href="e2/index.html">exercise 2</a></li>
+      <li><a href="e3/index.html">exercise 3</a></li>
     <img src="e1/Web1440-1.png">
   </body>
 </html>
