--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <title>Alexandra Middlebrooks</title>
-      <link href="../css/main.css" rel="stylesheet">
+      <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <h1>Alex's Work</h1>
@@ -11,6 +11,5 @@
       <li><a href="e1/index.html">exercise 1</a></li>
       <li><a href="e2/index.html">exercise 2</a></li>
       <li><a href="e3/index.html">exercise 3</a></li>
-    <img src="e1/Web1440-1.png">
   </body>
 </html>
