--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
       <li><a href="e1/index.html">exercise 1</a></li>
       <li><a href="e2/index.html">exercise 2</a></li>
       <li><a href="e3/index.html">exercise 3</a></li>
+      <li><a href="e4/index.html">exercise 4</a></li>
+      <li><a href="Project1/index.html">project 1</a></li>
   </body>
 </html>
