--- a/e4/index.html
+++ b/e4/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <title>Alexandra Middlebrooks</title>
-      <link href="../e4/main.css" rel="stylesheet">
+      <link href="main.css" rel="stylesheet">
   </head>
   <body>
     <h1><strong>Seven Principles of Typographic Contrast</strong></h1>
