--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Alex's Web Work</h1>
+    <h1>Alex's Work</h1>
     <ul>
       <li><a href="e0/index.html">exercise 0</a></li>
       <li><a href="e1/index.html">exercise 1</a></li>
