--- a/Project1/index13.html
+++ b/Project1/index13.html
@@ -5,9 +5,6 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>From the <a href="index14.html">fear</a> of serving others</p>
   </body>
 </html>
