--- a/Project1/index14.html
+++ b/Project1/index14.html
@@ -5,9 +5,6 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>Oh, and from the fear of death or <a href="index15.html">trial</a></p>
   </body>
 </html>
