--- a/Project1/index15.html
+++ b/Project1/index15.html
@@ -5,9 +5,6 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>And from the fear of <a href="index16.html">humility</a></p>
   </body>
 </html>
