--- a/Project1/index16.html
+++ b/Project1/index16.html
@@ -5,9 +5,7 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>Deliver me O God</p>
+    <p>Yes, <a href="index17.html">deliver</a> me O God</p>
   </body>
 </html>
