--- a/Project1/index21.html
+++ b/Project1/index21.html
@@ -5,9 +5,6 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>When I taste Your <a href="index22.html">goodness</a> I shall not want</p>
   </body>
 </html>
