--- a/Project1/index3.html
+++ b/Project1/index3.html
@@ -5,9 +5,6 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>From a fear of having <a href="index4.html">nothing</a></p>
   </body>
 </html>
