--- a/Project1/index9.html
+++ b/Project1/index9.html
@@ -5,9 +5,7 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>Deliver me O God</p>
+    <p>Deliver me <a href="index10.html">O God</a></p>
   </body>
 </html>
