--- a/Project1/index17.html
+++ b/Project1/index17.html
@@ -5,9 +5,6 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>And I shall not want, no, I shall <a href="index18.html">not</a> want</p>
   </body>
 </html>
