--- a/Project1/index2.html
+++ b/Project1/index2.html
@@ -5,9 +5,6 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>From the love of my own <a href="index3.html">comfort</a></p>
   </body>
 </html>
