--- a/Project1/index8.html
+++ b/Project1/index8.html
@@ -5,9 +5,6 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>  
-    <p>Audrey Assad</p>
+    <p>From the fear of being <a href="index9.html">lonely</a></p>
   </body>
 </html>
