--- a/e5/index.html
+++ b/e5/index.html
@@ -24,6 +24,6 @@
     <p>Layout 9</p>
     <img src="LW10.png">
     <p>Layout 10</p>
-    <img src="Lw11.png">
+    <img src="LW11.png">
   </body>
 </html>
