--- a/e4/index.html
+++ b/e4/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><strong>Seven Principles of Typographic Contrast</strong></h1>
-    <p>In a seminal booklet that he both designed and wrote, Carl Dair showed how in typography, as in music, harmony and contrast are the keys to composition.</p>
+    <p class="intro">In a seminal booklet that he both designed and wrote, Carl Dair showed how in typography, as in music, harmony and contrast are the keys to composition.</p>
 
     <p><em>Written by John D. Berry</em></p>
 
