--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="e3/index.html">exercise 3</a></li>
       <li><a href="e4/index.html">exercise 4</a></li>
       <li><a href="e5/index.html">exercise 5</a></li>
+      <li><a href="e6/openingindex.html">exercise 6</a></li>
       <li><a href="Project1/index.html">project 1</a></li>
   </body>
 </html>
