--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="e4/index.html">exercise 4</a></li>
       <li><a href="e5/index.html">exercise 5</a></li>
       <li><a href="e6/openingindex.html">exercise 6</a></li>
+      <li><a href="e7/index.html">exercise 7</a></li>
       <li><a href="Project1/index.html">project 1</a></li>
   </body>
 </html>
