--- a/e6/index/openingindex.html
+++ b/e6/index/openingindex.html
@@ -7,6 +7,10 @@
   <body>
     <h1>Exercise 6</h1>
     <ul>
-      <li><a href=""
+      <li><a href="index.html">Pattern 1</a></li>
+      <li><a href="index2.html">Pattern 2</a></li>
+      <li><a href="index3.html">Pattern 3</a></li>
+      <li><a href="index4.html">Pattern 4</a></li>
+      <li><a href="index5.html">Pattern 5</a></li>
   </body>
 </html>
