--- a/e6/index/index.html
+++ b/e6/index/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>exercise 6</title>
-    <link href="css/main.css" rel="stylesheet"
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
