--- a/e6/index/index5.html
+++ b/e6/index/index5.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <title>exercise 6</title>
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-  </body>
-</html>
+    <div class="container">
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
