--- a/Project1/index.html
+++ b/Project1/index.html
@@ -3,11 +3,12 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>
       <a href="index2.html">I Shall Not Want</a>
-    </h1>  
+    </h1>
     <p>Audrey Assad</p>
   </body>
 </html>
