--- a/Project1/index14.html
+++ b/Project1/index14.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>Oh, and from the fear of death or <a href="index15.html">trial</a></p>
