--- a/Project1/index18.html
+++ b/Project1/index18.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>When I taste Your <a href="index19.html">goodness</a> I shall not want</p>
