--- a/Project1/index19.html
+++ b/Project1/index19.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>No, I shall not want, no, I shall not <a href="index20.html">want</a></p>
