--- a/Project1/index2.html
+++ b/Project1/index2.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>From the love of my own <a href="index3.html">comfort</a></p>
