--- a/Project1/index3.html
+++ b/Project1/index3.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>From a fear of having <a href="index4.html">nothing</a></p>
