--- a/Project1/index7.html
+++ b/Project1/index7.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>And from a need to be <a href="index8.html">accepted</a></p>
