--- a/Project1/index10.html
+++ b/Project1/index10.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>And I shall not want, no, I shall not <a href="index11.html">want</a></p>
