--- a/Project1/index12.html
+++ b/Project1/index12.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>When I taste Your goodness, I shall <a href="index13.html">not want</a></p>
