--- a/Project1/index17.html
+++ b/Project1/index17.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>And I shall not want, no, I shall <a href="index18.html">not</a> want</p>
