--- a/Project1/index4.html
+++ b/Project1/index4.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <p>From a life of worldly <a href="index5.html">passions</a></p>
