--- a/Project1/index.html
+++ b/Project1/index.html
@@ -6,9 +6,11 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <a href="index2.html">I Shall Not Want</a>
-    </h1>
-    <p>Audrey Assad</p>
+    <div class="container">
+      <h1>
+        <a href="index2.html">I Shall Not Want</a>
+      </h1>
+      <p>Audrey Assad</p>
+    </div>
   </body>
 </html>
