--- a/Project1/index2.html
+++ b/Project1/index2.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>From the love of my own <a href="index3.html">comfort</a></p>
-  </body>
+    <div class="container">
+      <p>From the love of my own <a href="index3.html">comfort</a></p>
+    </div>  
+    </body>
 </html>
