--- a/Project1/index3.html
+++ b/Project1/index3.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>From a fear of having <a href="index4.html">nothing</a></p>
+    <div class="container">
+      <p>From a fear of having <a href="index4.html">nothing</a></p>
+    </div>
   </body>
 </html>
