--- a/Project1/index4.html
+++ b/Project1/index4.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>From a life of worldly <a href="index5.html">passions</a></p>
+    <div class="container">
+      <p>From a life of worldly <a href="index5.html">passions</a></p>
+    </div>  
   </body>
 </html>
