--- a/Project1/index5.html
+++ b/Project1/index5.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>Deliver me <a href="index6.html">O God</a></p>
+    <div class="container">
+      <p>Deliver me <a href="index6.html">O God</a></p>
+    </div>  
   </body>
 </html>
