--- a/Project1/index6.html
+++ b/Project1/index6.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>From the need to be <a href="index7.html">understood</a></p>
+    <div class="container">
+      <p>From the need to be <a href="index7.html">understood</a></p>
+    </div>  
   </body>
 </html>
