--- a/Project1/index7.html
+++ b/Project1/index7.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>And from a need to be <a href="index8.html">accepted</a></p>
+    <div class="container">
+      <p>And from a need to be <a href="index8.html">accepted</a></p>
+    </div>  
   </body>
 </html>
