--- a/Project1/index8.html
+++ b/Project1/index8.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>From the fear of being <a href="index9.html">lonely</a></p>
+    <div class="container">
+      <p>From the fear of being <a href="index9.html">lonely</a></p>
+    </div>  
   </body>
 </html>
