--- a/Project1/index10.html
+++ b/Project1/index10.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>And I shall not want, no, I shall not <a href="index11.html">want</a></p>
+    <div class="container">
+      <p>And I shall not want, no, I shall not <a href="index11.html">want</a></p>
+    </div>
   </body>
 </html>
