--- a/Project1/index13.html
+++ b/Project1/index13.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>From the <a href="index14.html">fear</a> of serving others</p>
+    <div class="container">
+      <p>From the <a href="index14.html">fear</a> of serving others</p>
+    </div>  
   </body>
 </html>
