--- a/Project1/index14.html
+++ b/Project1/index14.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>Oh, and from the fear of death or <a href="index15.html">trial</a></p>
+    <div class="container">
+      <p>Oh, and from the fear of death or <a href="index15.html">trial</a></p>
+    </div>  
   </body>
 </html>
