--- a/Project1/index15.html
+++ b/Project1/index15.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>And from the fear of <a href="index16.html">humility</a></p>
+    <div class="container">
+      <p>And from the fear of <a href="index16.html">humility</a></p>
+    </div>  
   </body>
 </html>
