--- a/Project1/index16.html
+++ b/Project1/index16.html
@@ -6,7 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>Deliver me O God</p>
-    <p>Yes, <a href="index17.html">deliver</a> me O God</p>
+    <div class="container">
+      <p>Deliver me O God</p>
+      <p>Yes, <a href="index17.html">deliver</a> me O God</p>
+    </div>  
   </body>
 </html>
