--- a/Project1/index18.html
+++ b/Project1/index18.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>When I taste Your <a href="index19.html">goodness</a> I shall not want</p>
+    <div class="container">
+      <p>When I taste Your <a href="index19.html">goodness</a> I shall not want</p>
+    </div>  
   </body>
 </html>
