--- a/Project1/index20.html
+++ b/Project1/index20.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>When I taste Your goodness I shall <a href="index21.html">not want</a></p>
+    <div class="container">
+      <p>When I taste Your goodness I shall <a href="index21.html">not want</a></p>
+    </div>  
   </body>
 </html>
