--- a/Project1/index9.html
+++ b/Project1/index9.html
@@ -6,7 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>Deliver me O God</p>
-    <p>Deliver me <a href="index10.html">O God</a></p>
+    <div class="container">
+      <p>Deliver me O God</p>
+      <p>Deliver me <a href="index10.html">O God</a></p>
+    </div>
   </body>
 </html>
