--- a/Project1/index17.html
+++ b/Project1/index17.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>And I shall not want, no, I shall <a href="index18.html">not</a> want</p>
+    <div class="container">
+      <p>And I shall not want, no, I shall <a href="index18.html">not</a> want</p>
+    </div>  
   </body>
 </html>
