--- a/Project1/index19.html
+++ b/Project1/index19.html
@@ -3,11 +3,11 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <p>No, I shall not want, no, I shall not <a href="index20.html">want</a></p>
-    </div>  
+    </div>
   </body>
 </html>
