--- a/Project1/index16.html
+++ b/Project1/index16.html
@@ -3,12 +3,12 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <p>Deliver me O God</p>
       <p>Yes, <a href="index17.html">deliver</a> me O God</p>
-    </div>  
+    </div>
   </body>
 </html>
