--- a/Project1/index2.html
+++ b/Project1/index2.html
@@ -3,11 +3,11 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <p>From the love of my own <a href="index3.html">comfort</a></p>
-    </div>  
+    </div>
     </body>
 </html>
