--- a/Project1/index22.html
+++ b/Project1/index22.html
@@ -3,11 +3,11 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <p>I shall <a href="index23.html">not</a> want</p>
-    </div>  
+    </div>
   </body>
 </html>
