--- a/Project1/index4.html
+++ b/Project1/index4.html
@@ -3,11 +3,11 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <p>From a life of worldly <a href="index5.html">passions</a></p>
-    </div>  
+    </div>
   </body>
 </html>
