--- a/e9/index.html
+++ b/e9/index.html
@@ -8,5 +8,6 @@
   <body id="images">
     <p>Site Map</p>
     <img src="e9.png">
+    <a href="https://www.designerfund.com">Designer Fund</a>
   </body>
 </html>
