--- a/e10/index.html
+++ b/e10/index.html
@@ -5,6 +5,8 @@
     <link href=../css/main.css rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="images">
+    <p>Wireframe 1: Desktop</p>
+    <img src=""
   </body>
 </html>
