--- a/e10/index.html
+++ b/e10/index.html
@@ -7,6 +7,9 @@
   </head>
   <body id="images">
     <p>Wireframe 1: Desktop</p>
-    <img src=""
+    <img src="e10_desktop.jpeg">
+    <p>Wireframe 2: Mobile</p>
+    <img src="e10_mobile1.jpeg">
+    <img src="e10_mobile2.jpeg">
   </body>
 </html>
