--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="e6/index/openingindex.html">exercise 6</a></li>
       <li><a href="e7/index.html">exercise 7</a></li>
       <li><a href="e9/index.html">exercise 9</a></li>
+      <li><a href="e10/index.html">exercise 10</a></li>
       <li><a href="Project1/index.html">project 1</a></li>
   </body>
 </html>
