--- a/e8/index5_2.html
+++ b/e8/index5_2.html
@@ -33,6 +33,14 @@
         <div class="thin"></div>
         <div class="thin"></div>
         <div class="thin"></div>
+        <!-- row 4 -->
+        <div class="medium"></div>
+        <div class="medium"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="medium"></div>
       </div>
       <div class="container3">
         <div class="short"></div>
