--- a/e8/openingindex.html
+++ b/e8/openingindex.html
@@ -14,6 +14,7 @@
       <li><a href="index4.html">Tennis Court</a></li>
       <li><a href="index5_2.html">California Case</a></li>
       <li><a href="index4_corrected.html">Tennis Court Corrected</a></li>
+      <li><a href="index6.html">Extra</a></li>
     </ul>
   </body>
 </html>
