--- a/e8/index6.html
+++ b/e8/index6.html
@@ -10,9 +10,11 @@
       <div class="container1">
         <div class="little"></div>
         <div class="little"></div>
-        <div class="little"></div>
+        <div class="container2">
+          <div class="little"></div>
+          <div class="little"></div>
+        </div>
         <div class="medium"></div>
-        <div class="little"></div>
       </div>
       <div class="container1">
         <div class="little"></div>
