--- a/Project 2/index/index4.html
+++ b/Project 2/index/index4.html
@@ -3,7 +3,14 @@
   <head>
     <title>Alexandra Middlebrooks</title>
     <link href="../../css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="images">
+    <p>Final</p>
+    <p>320px</p>
+    <img src=""
+    <p>768px</p>
+    <p>1024px</p>
+    <p>1440px</p>
   </body>
 </html>
