--- a/Project 2/index/index4.html
+++ b/Project 2/index/index4.html
@@ -8,9 +8,13 @@
   <body id="images">
     <p>Final</p>
     <p>320px</p>
-    <img src=""
+    <img src="../final/320.png">
     <p>768px</p>
+    <img src="../final/768.png">
     <p>1024px</p>
+    <img src="../final/1024.png">
     <p>1440px</p>
+    <img src="../final/1440.png">
+    <p>All images and text used for educational purposes only.</p>
   </body>
 </html>
